상품 목록 조회 API 쿼리 최적화