@@ -24,17 +24,23 @@ public class ItemRepositoryImpl implements ItemRepositoryCustom {
     public ItemDto.ItemCondResponse findItemListByCond(String itemSort, Long categoryId, String itemName, Boolean isDelete, int nowPage) {
         Pageable pageable = PageRequest.of(nowPage - 1, 10);
         JPAQuery<Item> query = queryFactory.selectFrom(item);
+        JPAQuery<Long> countQuery = queryFactory
+                .select(item.count())
+                .from(item);
 
         if (categoryId != null) {
             query.where(item.categoryId.id.eq(categoryId));
+            countQuery.where(item.categoryId.id.eq(categoryId));
         }
 
         if (itemName != null) {
             query.where(item.name.eq(itemName));
+            countQuery.where(item.name.eq(itemName));
         }
 
         if (isDelete != null) {
             query.where(item.isDelete.eq(isDelete));
+            countQuery.where(item.isDelete.eq(isDelete));
         }
 
         if (itemSort != null) {
@@ -45,12 +51,11 @@ public class ItemRepositoryImpl implements ItemRepositoryCustom {
             }
         }
 
-        QueryResults<Item> results = query
+        List<ItemDto.ItemResponse> results = query
                 .offset(pageable.getOffset())
                 .limit(pageable.getPageSize())
-                .fetchResults();
-
-        List<ItemDto.ItemResponse> itemList = results.getResults().stream()
+                .fetch()
+                .stream()
                 .map(item -> new ItemDto.ItemResponse(
                         item.getId(),
                         item.getName(),
@@ -61,10 +66,12 @@ public class ItemRepositoryImpl implements ItemRepositoryCustom {
                         item.isSell(),
                         item.getMainImg()
                 ))
-                .collect(Collectors.toList());
+                .toList();
 
-        int totalPages = (int) Math.ceil((double) results.getTotal() / pageable.getPageSize());
-        return new ItemDto.ItemCondResponse(itemList, totalPages, nowPage);
+        Long total = countQuery.fetchOne();
+
+        int totalPages = (int) Math.ceil((double) total / pageable.getPageSize());
+        return new ItemDto.ItemCondResponse(results, totalPages, nowPage);
 
     }
 }
